@@ -153,3 +153,5 @@ https://ent.ltn.com.tw/news/paper/1349373
 http://www.bcc.com.tw/newsView.3958417
 https://www.ettoday.net/news/20200204/1637272.htm
 https://www.ettoday.net/news/20200204/1637254.htm
+https://www.taiwannews.com.tw/en/news/3872760
+https://www.taiwannews.com.tw/ch/news/3872363
